<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Weather Service</string>
    <string name="reset_button">Reset</string>
	<string name="submit_button">Submit</string>
	<string name="edit_text_hint">Enter Location</string>
	<string name="no_data">No Data</string>
	<string name="wind">Wind</string>
	<string name="humidity">Humidity</string>
	<string name="sun">Sun</string>
	
	<string name="async_radio">Asynchrony</string>
	<string name="sync_radio">Synchrony</string>
	
	
	
	<string name="error_message">An error has occurred while calling Weather Service</string>

</resources>
