<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="org.coursera.weatherservice.activities.MainActivity" >

    <TextView
		        android:id="@+id/city_country"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content" 
		        android:textStyle="bold"
		        android:textSize="24sp"
		        android:textColor="@android:color/holo_blue_dark"
		        android:text="@string/no_data" />
    
    <LinearLayout 
        android:layout_weight="1"
        android:layout_height="0dp"
        android:layout_width="match_parent">
    <ScrollView
        	android:id="@+id/data_scroll"
        	android:visibility="gone"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
	    <LinearLayout 
	        android:orientation="vertical"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content">

		    <TextView
		        android:id="@+id/time"
		        android:layout_marginTop="@dimen/marginTopLinearLayout"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:gravity="right"/>
		    
		    <LinearLayout 
		        android:orientation="horizontal"
		        android:layout_marginTop="@dimen/marginTopLinearLayout"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content">
		        <TextView
			        android:id="@+id/temp"
			        android:layout_weight="1"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:textSize="60sp"
			        android:gravity="center" 
			        android:textColor="@android:color/holo_blue_dark" />

			        <TextView
			            android:id="@+id/description"
			            android:layout_weight="1"
				        android:layout_width="wrap_content"
				        android:layout_height="wrap_content"
				        android:gravity="center" />
		            
		    </LinearLayout>
		    
		    
		    <LinearLayout 
		        android:baselineAligned="false"
		        android:orientation="horizontal"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:divider="@drawable/vertical_divider"
		        android:showDividers="middle"
		        android:layout_marginTop="@dimen/marginTopLinearLayout">
		    
			    <LinearLayout 
			        android:orientation="vertical"
			        android:layout_width="match_parent"
			        android:layout_height="fill_parent"
			        android:layout_weight="1">
			        <TextView
				        android:layout_width="match_parent"
				        android:layout_height="wrap_content"
				        android:gravity="center"
				        android:textColor="@android:color/holo_blue_dark"
				        android:text="@string/wind" />
				    <TextView
				        android:id="@+id/wind"
				        android:layout_width="match_parent"
				        android:layout_height="wrap_content"
				        android:gravity="center" />
				    
				    <TextView
				        android:id="@+id/wind_d"
				        android:layout_width="match_parent"
				        android:layout_height="fill_parent"
				        android:textSize="16sp"
				        android:gravity="center" />
			    </LinearLayout>
			    
			    <LinearLayout 
			        android:orientation="vertical"
			        android:layout_width="match_parent"
			        android:layout_height="fill_parent"
			        android:layout_weight="1">
			        <TextView
				        android:layout_width="match_parent"
				        android:layout_height="wrap_content"
				        android:gravity="center"
				        android:textColor="@android:color/holo_blue_dark"
				        android:text="@string/humidity" />
				    <TextView
				        android:id="@+id/humidity"
				        android:layout_width="match_parent"
				        android:layout_height="fill_parent"
				        android:gravity="center"
				        android:textSize="24sp" />
				</LinearLayout>
			    
			    <LinearLayout 
			        android:orientation="vertical"
			        android:layout_width="match_parent"
			        android:layout_height="fill_parent"
			        android:layout_weight="1">
				    <TextView
			        android:layout_width="match_parent"
			        android:layout_height="wrap_content"
			        android:gravity="center"
			        android:textColor="@android:color/holo_blue_dark"
			        android:text="@string/sun" />
				    
				    <TextView
				        android:id="@+id/sunrise"
				        android:layout_width="wrap_content"
				        android:layout_height="wrap_content"
				        android:layout_gravity="center" 
				        android:drawableLeft="@android:drawable/arrow_up_float" />
				        

				        <TextView
				        android:id="@+id/sunset"
				        android:layout_width="wrap_content"
				        android:layout_height="wrap_content"
				        android:layout_gravity="center" 
				        android:drawableLeft="@android:drawable/arrow_down_float" />
	
			        
			    </LinearLayout>
			 </LinearLayout>
	    </LinearLayout>
    </ScrollView>
	</LinearLayout>
    <EditText 
        android:id="@+id/input_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/edit_text_hint" />
    
    <RadioGroup
        android:id="@+id/caller_type"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checkedButton="@+id/async"
        android:gravity="center">
        <RadioButton
            android:id="@id/async"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/async_radio" />
        <RadioButton
            android:id="@+id/sync"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sync_radio"/>

    </RadioGroup>
    
    
    <LinearLayout 
	        android:layout_marginTop="@dimen/marginTopLinearLayout"
	        android:orientation="horizontal"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content">
	    <Button
	        android:id="@+id/submit_button"
	        android:layout_weight="1"
	        android:text="@string/submit_button"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:onClick="callWeatherService" />
	    
	    <Button
	        android:id="@+id/reset_button"
	        android:layout_weight="1"
	        android:text="@string/reset_button"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:onClick="clearData" />
    </LinearLayout>
    
    
    
    

</LinearLayout>
